--- a/src/index.html
+++ b/src/index.html
@@ -114,15 +114,26 @@
         </div>
         <div class="control">
           <button class="control__button" onclick="location.href=location.href">
-            <img class="control__button-img" src="img/clear.png" alt="" />
+            <img
+              class="control__button-img"
+              width="48px"
+              height="48px"
+              src="img/clear.png"
+              alt=""
+            />
           </button>
           <button class="control__button" id="playButton">
-            <img class="control__button-img" src="img/play.png" alt="" />
+            <img
+              class="control__button-img"
+              width="48px"
+              height="48px"
+              src="img/play.png"
+              alt=""
+            />
           </button>
         </div>
       </form>
     </div>
-
     <script src="index.js"></script>
   </body>
 </html>
