fix width and height

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
           />
           <output class="output" name="resultNumberOfCell">10</output>
         </div>
-        <div>
+        <!-- <div>
           <label class="label" for="cellSize">Размер сетки</label>
           <input
             class="input"
@@ -51,7 +51,7 @@
             step="16"
           />
           <output class="output" name="resultCellSize">32</output>
-        </div>
+        </div> -->
         <div>
           <label class="label" for="ships1"
             >Колличество однопалубных кораблей</label
