--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <canvas id="canvas1" oncontextmenu="return false"></canvas>
+    <canvas
+      id="canvas1"
+      oncontextmenu="return false"
+      ondragstart="return false"
+    ></canvas>
     <div class="settings">
       <form
         class="settings__form"
