--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         class="settings__form"
         oninput="
         resultNumberOfCell.value=numberOfCell.value;
-        resultCellSize.value=cellSize.value;
+        // resultCellSize.value=cellSize.value;
         resultShips1.value=ships1.value;
         resultShips2.value=ships2.value;
         resultShips3.value=ships3.value;
