--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   <body>
     <canvas id="canvas1" oncontextmenu="return false"></canvas>
     <div class="settings">
+      <h1 class="title">Морской бой</h1>
       <form
         class="settings__form"
         oninput="
