add mouse adn setting module

--- a/src/index.html
+++ b/src/index.html
@@ -39,20 +39,7 @@
           />
           <output class="output" name="resultNumberOfCell">10</output>
         </div>
-        <!-- <div>
-          <label class="label" for="cellSize">Размер сетки</label>
-          <input
-            class="input"
-            type="range"
-            name="cellSize"
-            id="cellSize"
-            min="16"
-            max="32"
-            value="32"
-            step="16"
-          />
-          <output class="output" name="resultCellSize">32</output>
-        </div> -->
+
         <div>
           <label class="label" for="ships1"
             >Колличество однопалубных кораблей</label
@@ -68,6 +55,7 @@
           />
           <output class="output" name="resultShips1">4</output>
         </div>
+
         <div>
           <label class="label" for="ships2"
             >Колличество двухпалубных кораблей</label
@@ -83,6 +71,7 @@
           />
           <output class="output" name="resultShips2">3</output>
         </div>
+
         <div>
           <label class="label" for="ships3"
             >Колличество трехпалубных кораблей</label
@@ -98,6 +87,7 @@
           />
           <output class="output" name="resultShips3">2</output>
         </div>
+
         <div>
           <label class="label" for="ships4"
             >Колличество четырехпалубных кораблей</label
@@ -113,6 +103,7 @@
           />
           <output class="output" name="resultShips4">1</output>
         </div>
+
         <div class="control">
           <button class="control__button" onclick="location.href=location.href">
             <img
@@ -135,6 +126,6 @@
         </div>
       </form>
     </div>
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
